syntax = "proto3";

package services;

option go_package = "internal/services/proto";

message Metric {
  optional int64 delta = 1;
  optional double value = 2;
  string id = 3;
  string type = 4;
}

message SaveMetricsRequest {
  repeated Metric metrics = 1;
}

message SaveMetricsResponse {
  string error = 1;
}

service MetricSaverService {
  rpc UpdateMetrics(SaveMetricsRequest) returns (SaveMetricsResponse);
}